tests/ui/suggestions/suggest-mut-method-for-loop-closure.stderr
error[E0594]: cannot assign to `t.v`, which is behind a `&` reference
  --> $DIR/suggest-mut-method-for-loop-closure.rs:15:13
   |
LL |         for mut t in buzz.values() {
   |                      ------------- this iterator yields `&` references
...
LL |             t.v += 1;
   |             ^^^^^^^^ `t` is a `&` reference, so the data it refers to cannot be written
   |
help: use mutable method
   |
LL |         for mut t in buzz.values_mut() {
   |                           ~~~~~~~~~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
